--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ chardet==3.0.4
 charset-normalizer==2.1.1
 defusedxml==0.5.0
 distlib==0.3.6
-Django==4.1.4
+django==4.1.4
 django-allauth==0.37.1
 django-bootstrap==0.2.4
 django-bootstrap4==22.3
